update events docs
